--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ tests/coverage_html/
 tests/.coverage
 build/
 tests/report/
+settings.py
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
